Dialogs: all QML dialogs must have the Qt::Dialog window type

Being transient for the parent window is not enough to get the window
manager to center them.

Task-number: QTBUG-41844
Change-Id: I42ce018d5f08acabfeeeefa2a957dea907a6ca82
Reviewed-by: Laszlo Agocs <laszlo.agocs@digia.com>
Reviewed-by: Liang Qi <liang.qi@digia.com>